[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "proto-fuzzer"
version = "1.0.0"
description = "Layer 2/3 Protocol Fuzzer for ARP, ICMP, and MACsec"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "proto-fuzzer contributors" }]
keywords = ["fuzzer", "network", "security", "ARP", "ICMP", "MACsec", "scapy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "scapy>=2.5.0",
    "colorlog>=6.8.2",
    "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "black>=24.4.2",
    "flake8>=7.0.0",
]

[project.scripts]
proto-fuzzer = "fuzzer.main:main"

[project.urls]
Homepage = "https://github.com/your-org/proto-fuzzer"
"Bug Tracker" = "https://github.com/your-org/proto-fuzzer/issues"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
  | \.eggs
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["fuzzer"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
